# cts-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: python-ci.yml
src/cts_cli/: commands.py  main.py
src/cts_cli/api/: departure_time.py
src/cts_cli/cli/: departure_time.py
src/cts_cli/display/: datesandtimes.py  departure_time.py
src/cts_cli/utils/: loader.py  suggester.py
tests/: departure_time_call_test.py  departure_time_test.py
