[tool.poetry]
name = "cts-cli"
version = "0.1.0"
description = ""
authors = ["Mihamina Rakotovazaha <r.miham@yahoo.com>"]
readme = "README.md"
packages = [{include = "cts_cli", from = "src"}]

[tool.poetry.scripts]
cts-cli = "cts_cli.main:cli"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
requests = "^2.31.0"
python-decouple = "^3.8"
datetime = "^5.4"
pylint = "^3.0.4"
prettytable = "^3.10.0"
prompt-toolkit = "^3.0.43"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.0.1"
pylint = "^3.0.4"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
